--- a/EstateAgency/mysite/faq/templates/faq.html
+++ b/EstateAgency/mysite/faq/templates/faq.html
@@ -3,6 +3,7 @@
 {% block head %}
 <meta name="description" content="Frequently asked questions and answers">
 <meta name="keywords" content="questions, answers, FAQ, information">
+<link rel="stylesheet" type="text/css" href="/static/css/faq.css">
 {% endblock %}
 
 {% block content %}
