--- a/EstateAgency/mysite/main/templates/main.html
+++ b/EstateAgency/mysite/main/templates/main.html
@@ -3,53 +3,7 @@
 {% block head %}
 <meta name="description" content="Home. Latest article and information about partner companies">
 <meta name="keywords" content="article, latest article, partner companies, partnership">
-<style>
-    /* Custom CSS styles */
-    .main-content {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        padding: 20px;
-    }
-
-    .latest-article {
-        margin-bottom: 30px;
-    }
-
-    .partner-companies {
-        text-align: center;
-    }
-
-    .partner-list {
-        list-style: none;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-    }
-
-    .partner-item {
-        flex-grow: 1;
-        margin: 10px;
-    }
-
-    .partner-logo {
-        max-width: 100px;
-        height: auto;
-    }
-
-    /* Responsive adjustments */
-    @media screen and (max-width: 768px) {
-        .partner-list {
-            flex-wrap: wrap;
-        }
-
-        .partner-item {
-            flex-basis: calc(50% - 20px);
-        }
-    }
-</style>
+<link rel="stylesheet" type="text/css" href="/static/css/main.css">
 {% endblock %}
 
 {% block content %}
@@ -69,8 +23,9 @@
     </section>
 
     <article itemscope itemtype="http://schema.org/Organization" class="partner-companies">
-        <h2>Partner companies:</h2>
-        <ul class="partner-list">
+    <h2>Partner companies:</h2>
+    <div class="partner-list">
+        <ul>
             <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item">
                 <a href="https://alfabank.ru/">
                     <img src="static/partners/alpha.png" alt="Logo 1" class="partner-logo">
@@ -92,7 +47,9 @@
                 </a>
             </li>
         </ul>
+    </div>
     </article>
+
 </div>
 
 {% endblock %}
