--- a/EstateAgency/mysite/vacancy/templates/vacancy.html
+++ b/EstateAgency/mysite/vacancy/templates/vacancy.html
@@ -3,6 +3,7 @@
 {% block head %}
 <meta name="description" content="List of vacancies">
 <meta name="keywords" content="vacancies, work, employment">
+<link rel="stylesheet" type="text/css" href="/static/css/vacancies.css">
 {% endblock %}
 
 {% block content %}
@@ -17,6 +18,5 @@
     </li>
     {% endfor %}
 </ul>
-
 
 {% endblock %}
