--- a/EstateAgency/mysite/EstateAgency/templates/EstateAgency/base_agency.html
+++ b/EstateAgency/mysite/EstateAgency/templates/EstateAgency/base_agency.html
@@ -7,9 +7,7 @@
     {% block head %} {% endblock %}
     <title>Estate Agency</title>
     <link rel="icon" href="/static/logo/logo.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="/static/css/my1.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/my2.css">
-    <style> {% block header %} {% endblock %} </style>
+    <link rel="stylesheet" type="text/css" href="/static/css/base_main.css">
 </head>
 <body>
 <header>
@@ -49,6 +47,7 @@
 
 <div class="main-content">
     {% block content %}
+    <!-- Ваш контент здесь -->
     {% endblock %}
 </div>
 
