--- a/EstateAgency/mysite/coupon/templates/coupon.html
+++ b/EstateAgency/mysite/coupon/templates/coupon.html
@@ -1,35 +1,37 @@
-{% extends 'EstateAgency/base_agency.html' %}
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Page with promotional codes and coupons">
+    <meta name="keywords" content="promotional codes, coupons, promotions, discounts">
+    <title>Promotional codes and coupons</title>
+<link rel="stylesheet" type="text/css" href="/static/css/coupons.css">
+</head>
+<body>
+    <h1>Promotional codes and coupons</h1>
 
-{% block head %}
-<meta name="description" content="Page with promotional codes and coupons">
-<meta name="keywords" content="promotional codes, coupons, promotions, discounts">
-{% endblock %}
-
-{% block content %}
-
-<h1>Promotional codes and coupons</h1>
-
-<table border="10px">
-    <tr>
-        <th>Code</th>
-        <th>Description</th>
-        <th></th>
-        <th>Valid</th>
-    </tr>
-    {% for coupon in coupons_true %}
-    <tr>
-        <td>{{ coupon.code }}</td>
-        <td colspan="2">{{ coupon.description }}</td>
-        <td>Yes</td>
-    </tr>
-    {% endfor %}
-    {% for coupon in coupons_false %}
-    <tr>
-        <td>{{ coupon.code }}</td>
-        <td colspan="2">{{ coupon.description }}</td>
-        <td>No</td>
-    </tr>
-    {% endfor %}
-</table>
-
-{% endblock %}
+    <table class="promotional-table">
+        <tr>
+            <th>Code</th>
+            <th>Description</th>
+            <th></th>
+            <th>Valid</th>
+        </tr>
+        {% for coupon in coupons_true %}
+        <tr>
+            <td>{{ coupon.code }}</td>
+            <td colspan="2">{{ coupon.description }}</td>
+            <td>Yes</td>
+        </tr>
+        {% endfor %}
+        {% for coupon in coupons_false %}
+        <tr>
+            <td>{{ coupon.code }}</td>
+            <td colspan="2">{{ coupon.description }}</td>
+            <td>No</td>
+        </tr>
+        {% endfor %}
+    </table>
+</body>
+</html>
