--- a/EstateAgency/mysite/faq/templates/faq.html
+++ b/EstateAgency/mysite/faq/templates/faq.html
@@ -9,13 +9,13 @@
 {% block content %}
 
 <h1 itemprop="headline">FAQ</h1>
-<ul itemprop="mainEntity" itemscope itemtype="http://schema.org/FAQPage">
+<ul class="faq-list" itemprop="mainEntity" itemscope itemtype="http://schema.org/FAQPage">
     {% for faq_item in faq_items %}
-    <li itemprop="itemListElement" itemscope itemtype="http://schema.org/Question">
+    <li class="faq-item" itemprop="itemListElement" itemscope itemtype="http://schema.org/Question">
         <details>
-            <summary itemprop="name">{{ faq_item.question }} - {{ faq_item.date_added }}</summary>
+            <summary itemprop="name" class="faq-question">{{ faq_item.question }} - {{ faq_item.date_added }}</summary>
             <div itemprop="acceptedAnswer" itemscope itemtype="http://schema.org/Answer">
-                <p itemprop="text">{{ faq_item.answer }}</p>
+                <p itemprop="text" class="faq-answer">{{ faq_item.answer }}</p>
             </div>
         </details>
     </li>
