--- a/EstateAgency/mysite/main/templates/main.html
+++ b/EstateAgency/mysite/main/templates/main.html
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="main-content">
-    <aside>
+    <aside class="banner-object"> <!-- Добавляем класс для анимации -->
         <a href="https://mak.by/ru/">
             <img src="static/banner/mac.jpg" alt="Advertising banner" width="200">
         </a>
@@ -26,25 +26,29 @@
     <h2>Partner companies:</h2>
     <div class="partner-list">
         <ul>
-            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item">
+            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item company-block"> <!-- Добавляем классы для круглых блоков и стилей -->
                 <a href="https://alfabank.ru/">
                     <img src="static/partners/alpha.png" alt="Logo 1" class="partner-logo">
                 </a>
+                <span class="company-name">Alpha Bank</span> <!-- Добавляем класс для стилей шрифта и кернинга -->
             </li>
-            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item">
+            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item company-block">
                 <a href="https://www.amazon.com/">
                     <img src="static/partners/amazon.png" alt="Logo 2" class="partner-logo">
                 </a>
+                <span class="company-name">Amazon</span>
             </li>
-            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item">
+            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item company-block">
                 <a href="https://github.com/">
                     <img src="static/partners/github.png" alt="Logo 3" class="partner-logo">
                 </a>
+                <span class="company-name">GitHub</span>
             </li>
-            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item">
+            <li itemprop="affiliation" itemscope itemtype="http://schema.org/Organization" class="partner-item company-block">
                 <a href="https://vk.com/">
                     <img src="static/partners/vk.png" alt="Logo 4" class="partner-logo">
                 </a>
+                <span class="company-name">VK</span>
             </li>
         </ul>
     </div>
