--- a/EstateAgency/mysite/static/css/news.css
+++ b/EstateAgency/mysite/static/css/news.css
@@ -1,57 +1,78 @@
-
-
-/*------------------news page------------------*/
 /* Стили для списка новостей */
-.news-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+.news-list {
+  list-style-type: none;
+  padding: 0;
 }
 
-.news-article {
-    width: calc(33.33% - 20px);
-    background-color: #f5f5f5;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+.news-item {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  background-color: #fff;
 }
 
-/* Стили для заголовка новости */
+/* Стили для заголовка статьи */
 .news-title {
-    font-size: 24px;
-    margin-bottom: 10px;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
-/* Стили для изображения новости */
-.news-image {
-    width: 100%;
-    max-height: 200px;
-    object-fit: cover;
-    border-radius: 5px;
-}
-
-/* Стили для краткой информации о новости */
+/* Стили для краткой информации */
 .news-summary {
-    font-size: 16px;
-    margin-bottom: 10px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
+  font-size: 16px;
+  margin-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+/* Стили для изображения */
+.news-image {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 10px;
 }
 
 /* Стили для кнопки "Читать далее" */
-.read-more-btn {
-    display: inline-block;
-    background-color: #003f7d;
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
+.read-more-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #333;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
 }
 
-.read-more-btn:hover {
-    background-color: #372966;
+.read-more-button:hover {
+  background-color: #555;
+}
+
+/* Многоколоночный макет для текста статьи */
+.article-content {
+  column-count: 2; /* Установите желаемое количество колонок */
+  column-gap: 20px;
+}
+
+/* Стили для абзацев внутри статьи */
+.article-content p {
+  margin-bottom: 10px;
+}
+
+/* Стили для списков внутри статьи */
+.article-content ul,
+.article-content ol {
+  margin-left: 20px;
+}
+
+/* Стили для ссылок внутри статьи */
+.article-content a {
+  color: #333;
+  text-decoration: underline;
+}
+
+.article-content a:hover {
+  color: #555;
 }
