--- a/EstateAgency/mysite/EstateAgency/templates/EstateAgency/base_agency.html
+++ b/EstateAgency/mysite/EstateAgency/templates/EstateAgency/base_agency.html
@@ -18,26 +18,25 @@
                  onclick="window.location.href='{%url 'EstateAgency:agency_list' 0 %}';">ESTATE OBJECTS</div>
             <div class="nav-item"
                  onclick="window.location.href='{%url 'review:home' %}';">REVIEW</div>
-            <div class="dropdown">
-                <select class="dropdown-select" onchange="window.location.href=this.value;">
-                    <option value="" selected disabled>MENU</option>
-                    <option value="{%url 'news:home' %}">NEWS</option>
-                    <option value="{%url 'faq:home' %}">FAQ</option>
-                    <option value="{%url 'employee:home' %}">CONTACTS</option>
-                    <option value="{%url 'coupon:home' %}">COUPONS</option>
-                    <option value="{%url 'about:home' %}">ABOUT</option>
-                </select>
-            </div>
+            <div class="nav-item"
+                 onclick="window.location.href='{%url 'news:home' %}';">NEWS</div>
+            <div class="nav-item"
+                 onclick="window.location.href='{%url 'faq:home' %}';">FAQ</div>
+            <div class="nav-item"
+                 onclick="window.location.href='{%url 'employee:home' %}';">CONTACTS</div>
+            <div class="nav-item"
+                 onclick="window.location.href='{%url 'coupon:home' %}';">COUPONS</div>
+            <div class="nav-item"
+                 onclick="window.location.href='{%url 'about:home' %}';">ABOUT</div>
         </div>
 
         {% if user.is_authenticated %}
-
-        <div>
+        <div class="user-info">
             <div class="nav-item">{{user.username}}</div>
             <button class="button1" onclick="location.href='{%url 'auth_user:logout' %}'">Sign Out</button>
         </div>
         {% else %}
-        <div>
+        <div class="user-info">
             <button class="button1" onclick="location.href='{%url 'auth_user:register' %}'">Sign Up</button>
             <button class="button1" onclick="location.href='{%url 'auth_user:login' %}'">Sign In</button>
         </div>
@@ -46,9 +45,11 @@
 </header>
 
 <div class="main-content">
-    {% block content %}
-    <!-- Ваш контент здесь -->
-    {% endblock %}
+    <section>
+        {% block content %}
+        <!-- Ваш контент здесь -->
+        {% endblock %}
+    </section>
 </div>
 
 <footer>
