--- a/EstateAgency/mysite/static/css/base_main.css
+++ b/EstateAgency/mysite/static/css/base_main.css
@@ -1,104 +1,41 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f5f5f5;
-}
-
-/* Header styles */
-header {
-    background-color: #003f7d;
-    color: white;
-    padding: 10px 0;
-}
-
+/* Стили для шапки */
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+    background-color: #40035c; /* Цвет фона */
+    color: #fff; /* Цвет текста */
+    padding: 10px 0; /* Внутренние отступы сверху и снизу */
+    display: flex; /* Устанавливаем flex-контейнер */
+    justify-content: space-between; /* Равномерное распределение элементов */
+    align-items: center; /* Выравнивание элементов по центру */
 }
 
 .logo {
-    font-size: 24px;
-    font-weight: bold;
-    cursor: pointer;
+    font-size: 24px; /* Размер шрифта логотипа */
+    cursor: pointer; /* Изменение курсора при наведении */
 }
 
 .nav {
-    display: flex;
-    gap: 20px;
+    display: flex; /* Устанавливаем flex-контейнер для навигации */
+    gap: 20px; /* Расстояние между элементами навигации */
 }
 
 .nav-item {
-    font-size: 18px;
-    cursor: pointer;
+    cursor: grab pointer; /* Изменение курсора при наведении на элементы навигации */
 }
 
-.dropdown {
-    position: relative;
-}
-
-.dropdown-select {
-    background-color: #003f7d;
-    border: none;
-    font-size: 16px;
-    cursor: pointer;
-    color: white;
-}
-
-.dropdown-menu {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: #003f7d;
-    color: white;
-    border: 1px solid #003f7d;
-    border-radius: 5px;
-    z-index: 1;
-    display: none;
-}
-
-.dropdown-menu a {
-    display: block;
-    padding: 10px 20px;
-    text-decoration: none;
-    color: white; /* Цвет текста изменен на белый */
-    transition: background-color 0.3s ease;
-}
-
-.dropdown-menu a:hover {
-    background-color: #372966;
-}
-
-/* Main content styles */
+/* Стили для основного контента */
 .main-content {
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 10px; /* Внешние отступы */
 }
 
-/* Footer styles */
-footer {
-    background-color: #003f7d;
-    color: white;
-    padding: 10px 0;
-}
-
+/* Стили для футера */
 .footer {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
+    background-color: #40035c;
+    color: #fff;
+    padding: 10px 0;
     display: flex;
     justify-content: space-between;
-    align-items: center;
 }
 
 .footer-item {
-    font-size: 16px;
-    cursor: pointer;
+    cursor: pointer; /* Изменение курсора при наведении на элементы футера */
 }
